# AudioCrypt

./: .gitignore  CMakeLists.txt  README.md  Readme.md
include/: freq_decode.h  freq_encode.h
src/: freq_decode.cpp  freq_encode.cpp  main.cpp
